antlr3/The main GUI with grammar/Complete/Netbeans/AntlrLab3BGUI - Students/src/finalParser.java
// $ANTLR 3.4 E:\\computer science\\cs\\level4\\407\\try\\sub\\project\\comp407\\antlr3\\final.g 2024-05-13 23:06:29

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class finalParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "Bool_CH", "CLASSDEC", "COMMENT", "ELSE", "EXPR", "ID", "IF", "Int_N", "MAINCLASS", "MAINSTMT", "METHODDEC", "Operator", "STARTIT", "WHILE", "WS", "'!'", "'('", "')'", "','", "'.'", "';'", "'='", "'String'", "'System.out.println'", "'['", "']'", "'boolean'", "'class'", "'extends'", "'int'", "'length'", "'main'", "'new'", "'public'", "'return'", "'static'", "'this'", "'void'", "'{'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int Bool_CH=4;
    public static final int CLASSDEC=5;
    public static final int COMMENT=6;
    public static final int ELSE=7;
    public static final int EXPR=8;
    public static final int ID=9;
    public static final int IF=10;
    public static final int Int_N=11;
    public static final int MAINCLASS=12;
    public static final int MAINSTMT=13;
    public static final int METHODDEC=14;
    public static final int Operator=15;
    public static final int STARTIT=16;
    public static final int WHILE=17;
    public static final int WS=18;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public finalParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public finalParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return finalParser.tokenNames; }
    public String getGrammarFileName() { return "E:\\computer science\\cs\\level4\\407\\try\\sub\\project\\comp407\\antlr3\\final.g"; }


    String s="";


    public static class compilationUnit_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "compilationUnit"
    // E:\\computer science\\cs\\level4\\407\\try\\sub\\project\\comp407\\antlr3\\final.g:19:1: compilationUnit : new_compilationUnit -> ^( STARTIT new_compilationUnit ) ;
    public final finalParser.compilationUnit_return compilationUnit() throws RecognitionException {
        finalParser.compilationUnit_return retval = new finalParser.compilationUnit_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        finalParser.new_compilationUnit_return new_compilationUnit1 =null;


        RewriteRuleSubtreeStream stream_new_compilationUnit=new RewriteRuleSubtreeStream(adaptor,"rule new_compilationUnit");
        try {
            // E:\\computer science\\cs\\level4\\407\\try\\sub\\project\\comp407\\antlr3\\final.g:19:16: ( new_compilationUnit -> ^( STARTIT new_compilationUnit ) )
            // E:\\computer science\\cs\\level4\\407\\try\\sub\\project\\comp407\\antlr3\\final.g:19:17: new_compilationUnit
            {
            pushFollow(FOLLOW_new_compilationUnit_in_compilationUnit46);
            new_compilationUnit1=new_compilationUnit();

            state._fsp--;

            stream_new_compilationUnit.add(new_compilationUnit1.getTree());

            // AST REWRITE
            // elements: new_compilationUnit
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 19:37: -> ^( STARTIT new_compilationUnit )
            {
                // E:\\computer science\\cs\\level4\\407\\try\\sub\\project\\comp407\\antlr3\\final.g:19:40: ^( STARTIT new_compilationUnit )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(STARTIT, "STARTIT")
                , root_1);

                adaptor.addChild(root_1, stream_new_compilationUnit.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (MismatchedTokenException e) {
             s = s +getErrorMessage(e,new String[]{e.input.toString()})+": "+getErrorHeader(e) +"\n";
        }
        catch (NoViableAltException e) {
             s = s +getErrorMessage(e,new String[]{e.input.toString()})+": "+getErrorHeader(e) +"\n";
        }
        catch (RecognitionException e) {
             s = s +getErrorMessage(e,new String[]{e.input.toString()})+": "+getErrorHeader(e) +"\n";
        }

        finally {
        	// do for sure before leaving
             s = s + "Exit..."+"\n"; 
        }
        return retval;
    }
    // $ANTLR end "compilationUnit"


    public static class new_compilationUnit_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "new_compilationUnit"
    // E:\\computer science\\cs\\level4\\407\\try\\sub\\project\\comp407\\antlr3\\final.g:29:1: new_compilationUnit : mainClass ( classDeclaration )* ;
    public final finalParser.new_compilationUnit_return new_compilationUnit() throws RecognitionException {
        finalParser.new_compilationUnit_return retval = new finalParser.new_compilationUnit_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        finalParser.mainClass_return mainClass2 =null;

        finalParser.classDeclaration_return classDeclaration3 =null;



        try {
            // E:\\computer science\\cs\\level4\\407\\try\\sub\\project\\comp407\\antlr3\\final.g:30:2: ( mainClass ( classDeclaration )* )
            // E:\\computer science\\cs\\level4\\407\\try\\sub\\project\\comp407\\antlr3\\final.g:30:5: mainClass ( classDeclaration )*
            {
            root_0 = (Object)adaptor.nil();


            pushFollow(FOLLOW_mainClass_in_new_compilationUnit95);
            mainClass2=mainClass();

            state._fsp--;

            adaptor.addChild(root_0, mainClass2.getTree());

            // E:\\computer science\\cs\\level4\\407\\try\\sub\\project\\comp407\\antlr3\\final.g:30:15: ( classDeclaration )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==31) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // E:\\computer science\\cs\\level4\\407\\try\\sub\\project\\comp407\\antlr3\\final.g:30:16: classDeclaration
            	    {
            	    pushFollow(FOLLOW_classDeclaration_in_new_compilationUnit98);
            	    classDeclaration3=classDeclaration();

            	    state._fsp--;

            	    adaptor.addChild(root_0, classDeclaration3.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "new_compilationUnit"


    public static class mainClass_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "mainClass"
    // E:\\computer science\\cs\\level4\\407\\try\\sub\\project\\comp407\\antlr3\\final.g:33:1: mainClass : ast_main -> ^( MAINCLASS ast_main ) ;
    public final finalParser.mainClass_return mainClass() throws RecognitionException {
        finalParser.mainClass_return retval = new finalParser.mainClass_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        finalParser.ast_main_return ast_main4 =null;


        RewriteRuleSubtreeStream stream_ast_main=new RewriteRuleSubtreeStream(adaptor,"rule ast_main");
        try {
            // E:\\computer science\\cs\\level4\\407\\try\\sub\\project\\comp407\\antlr3\\final.g:33:10: ( ast_main -> ^( MAINCLASS ast_main ) )
            // E:\\computer science\\cs\\level4\\407\\try\\sub\\project\\comp407\\antlr3\\final.g:33:12: ast_main
            {
            pushFollow(FOLLOW_ast_main_in_mainClass111);
            ast_main4=ast_main();

            state._fsp--;

            stream_ast_main.add(ast_main4.getTree());

            // AST REWRITE
            // elements: ast_main
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 33:21: -> ^( MAINCLASS ast_main )
            {
                // E:\\computer science\\cs\\level4\\407\\try\\sub\\project\\comp407\\antlr3\\final.g:33:24: ^( MAINCLASS ast_main )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(MAINCLASS, "MAINCLASS")
                , root_1);

                adaptor.addChild(root_1, stream_ast_main.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (MismatchedTokenException e) {
             s = s +getErrorMessage(e,new String[]{e.input.toString()})+": "+getErrorHeader(e) +"\n";
        }
        catch (NoViableAltException e) {
             s = s +getErrorMessage(e,new String[]{e.input.toString()})+": "+getErrorHeader(e) +"\n";
        }
        catch (RecognitionException e) {
             s = s +getErrorMessage(e,new String[]{e.input.toString()})+": "+getErrorHeader(e) +"\n";
        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "mainClass"


    public static class ast_main_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "ast_main"
    // E:\\computer science\\cs\\level4\\407\\try\\sub\\project\\comp407\\antlr3\\final.g:40:1: ast_main : ( 'class' ID '{' 'public' 'static' 'void' 'main' '(' 'String' '[' ']' ID ')' '{' ( stmt )* '}' '}' ) ;
    public final finalParser.ast_main_return ast_main() throws RecognitionException {
        finalParser.ast_main_return retval = new finalParser.ast_main_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token string_literal5=null;
        Token ID6=null;
        Token char_literal7=null;
        Token string_literal8=null;
        Token string_literal9=null;
        Token string_literal10=null;
        Token string_literal11=null;
        Token char_literal12=null;
        Token string_literal13=null;
        Token char_literal14=null;
        Token char_literal15=null;
        Token ID16=null;
        Token char_literal17=null;
        Token char_literal18=null;
        Token char_literal20=null;
        Token char_literal21=null;
        finalParser.stmt_return stmt19 =null;


        Object string_literal5_tree=null;
        Object ID6_tree=null;
        Object char_literal7_tree=null;
        Object string_literal8_tree=null;
        Object string_literal9_tree=null;
        Object string_literal10_tree=null;
        Object string_literal11_tree=null;
        Object char_literal12_tree=null;
        Object string_literal13_tree=null;
        Object char_literal14_tree=null;
        Object char_literal15_tree=null;
        Object ID16_tree=null;
        Object char_literal17_tree=null;
        Object char_literal18_tree=null;
        Object char_literal20_tree=null;
        Object char_literal21_tree=null;

        try {
            // E:\\computer science\\cs\\level4\\407\\try\\sub\\project\\comp407\\antlr3\\final.g:40:9: ( ( 'class' ID '{' 'public' 'static' 'void' 'main' '(' 'String' '[' ']' ID ')' '{' ( stmt )* '}' '}' ) )
            // E:\\computer science\\cs\\level4\\407\\try\\sub\\project\\comp407\\antlr3\\final.g:40:10: ( 'class' ID '{' 'public' 'static' 'void' 'main' '(' 'String' '[' ']' ID ')' '{' ( stmt )* '}' '}' )
            {
            root_0 = (Object)adaptor.nil();


            // E:\\computer science\\cs\\level4\\407\\try\\sub\\project\\comp407\\antlr3\\final.g:40:10: ( 'class' ID '{' 'public' 'static' 'void' 'main' '(' 'String' '[' ']' ID ')' '{' ( stmt )* '}' '}' )
            // E:\\computer science\\cs\\level4\\407\\try\\sub\\project\\comp407\\antlr3\\final.g:40:11: 'class' ID '{' 'public' 'static' 'void' 'main' '(' 'String' '[' ']' ID ')' '{' ( stmt )* '}' '}'
            {
            string_literal5=(Token)match(input,31,FOLLOW_31_in_ast_main151); 
            string_literal5_tree = 
            (Object)adaptor.create(string_literal5)
            ;
            adaptor.addChild(root_0, string_literal5_tree);


            ID6=(Token)match(input,ID,FOLLOW_ID_in_ast_main153); 
            ID6_tree = 
            (Object)adaptor.create(ID6)
            ;
            adaptor.addChild(root_0, ID6_tree);


            char_literal7=(Token)match(input,42,FOLLOW_42_in_ast_main155); 
            char_literal7_tree = 
            (Object)adaptor.create(char_literal7)
            ;
            adaptor.addChild(root_0, char_literal7_tree);


            string_literal8=(Token)match(input,37,FOLLOW_37_in_ast_main157); 
            string_literal8_tree = 
            (Object)adaptor.create(string_literal8)
            ;
            adaptor.addChild(root_0, string_literal8_tree);


            string_literal9=(Token)match(input,39,FOLLOW_39_in_ast_main159); 
            string_literal9_tree = 
            (Object)adaptor.create(string_literal9)
            ;
            adaptor.addChild(root_0, string_literal9_tree);


            string_literal10=(Token)match(input,41,FOLLOW_41_in_ast_main161); 
            string_literal10_tree = 
            (Object)adaptor.create(string_literal10)
            ;
            adaptor.addChild(root_0, string_literal10_tree);


            string_literal11=(Token)match(input,35,FOLLOW_35_in_ast_main163); 
            string_literal11_tree = 
            (Object)adaptor.create(string_literal11)
            ;
            adaptor.addChild(root_0, string_literal11_tree);


            char_literal12=(Token)match(input,20,FOLLOW_20_in_ast_main165); 
            char_literal12_tree = 
            (Object)adaptor.create(char_literal12)
            ;
            adaptor.addChild(root_0, char_literal12_tree);


            string_literal13=(Token)match(input,26,FOLLOW_26_in_ast_main167); 
            string_literal13_tree = 
            (Object)adaptor.create(string_literal13)
            ;
            adaptor.addChild(root_0, string_literal13_tree);


            char_literal14=(Token)match(input,28,FOLLOW_28_in_ast_main169); 
            char_literal14_tree = 
            (Object)adaptor.create(char_literal14)
            ;
            adaptor.addChild(root_0, char_literal14_tree);


            char_literal15=(Token)match(input,29,FOLLOW_29_in_ast_main171); 
            char_literal15_tree = 
            (Object)adaptor.create(char_literal15)
            ;
            adaptor.addChild(root_0, char_literal15_tree);


            ID16=(Token)match(input,ID,FOLLOW_ID_in_ast_main173); 
            ID16_tree = 
            (Object)adaptor.create(ID16)
            ;
            adaptor.addChild(root_0, ID16_tree);


            char_literal17=(Token)match(input,21,FOLLOW_21_in_ast_main175); 
            char_literal17_tree = 
            (Object)adaptor.create(char_literal17)
            ;
            adaptor.addChild(root_0, char_literal17_tree);


            char_literal18=(Token)match(input,42,FOLLOW_42_in_ast_main177); 
            char_literal18_tree = 
            (Object)adaptor.create(char_literal18)
            ;
            adaptor.addChild(root_0, char_literal18_tree);


            // E:\\computer science\\cs\\level4\\407\\try\\sub\\project\\comp407\\antlr3\\final.g:40:90: ( stmt )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( ((LA2_0 >= ID && LA2_0 <= IF)||LA2_0==WHILE||LA2_0==27||LA2_0==42) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // E:\\computer science\\cs\\level4\\407\\try\\sub\\project\\comp407\\antlr3\\final.g:40:91: stmt
            	    {
            	    pushFollow(FOLLOW_stmt_in_ast_main180);
            	    stmt19=stmt();

            	    state._fsp--;

            	    adaptor.addChild(root_0, stmt19.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            char_literal20=(Token)match(input,43,FOLLOW_43_in_ast_main184); 
            char_literal20_tree = 
            (Object)adaptor.create(char_literal20)
            ;
            adaptor.addChild(root_0, char_literal20_tree);


            char_literal21=(Token)match(input,43,FOLLOW_43_in_ast_main186); 
            char_literal21_tree = 
            (Object)adaptor.create(char_literal21)
            ;
            adaptor.addChild(root_0, char_literal21_tree);


            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "ast_main"


    public static class classDeclaration_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "classDeclaration"
    // E:\\computer science\\cs\\level4\\407\\try\\sub\\project\\comp407\\antlr3\\final.g:45:1: classDeclaration : ast_classDeclaration -> ^( CLASSDEC ast_classDeclaration ) ;
    public final finalParser.classDeclaration_return classDeclaration() throws RecognitionException {
        finalParser.classDeclaration_return retval = new finalParser.classDeclaration_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        finalParser.ast_classDeclaration_return ast_classDeclaration22 =null;


        RewriteRuleSubtreeStream stream_ast_classDeclaration=new RewriteRuleSubtreeStream(adaptor,"rule ast_classDeclaration");
        try {
            // E:\\computer science\\cs\\level4\\407\\try\\sub\\project\\comp407\\antlr3\\final.g:46:2: ( ast_classDeclaration -> ^( CLASSDEC ast_classDeclaration ) )
            // E:\\computer science\\cs\\level4\\407\\try\\sub\\project\\comp407\\antlr3\\final.g:46:4: ast_classDeclaration
            {
            pushFollow(FOLLOW_ast_classDeclaration_in_classDeclaration201);
            ast_classDeclaration22=ast_classDeclaration();

            state._fsp--;

            stream_ast_classDeclaration.add(ast_classDeclaration22.getTree());

            // AST REWRITE
            // elements: ast_classDeclaration
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 46:25: -> ^( CLASSDEC ast_classDeclaration )
            {
                // E:\\computer science\\cs\\level4\\407\\try\\sub\\project\\comp407\\antlr3\\final.g:46:28: ^( CLASSDEC ast_classDeclaration )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(CLASSDEC, "CLASSDEC")
                , root_1);

                adaptor.addChild(root_1, stream_ast_classDeclaration.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (MismatchedTokenException e) {
             s = s +getErrorMessage(e,new String[]{e.input.toString()})+": "+getErrorHeader(e) +"\n";
        }
        catch (NoViableAltException e) {
             s = s +getErrorMessage(e,new String[]{e.input.toString()})+": "+getErrorHeader(e) +"\n";
        }
        catch (RecognitionException e) {
             s = s +getErrorMessage(e,new String[]{e.input.toString()})+": "+getErrorHeader(e) +"\n";
        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "classDeclaration"


    public static class ast_classDeclaration_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "ast_classDeclaration"
    // E:\\computer science\\cs\\level4\\407\\try\\sub\\project\\comp407\\antlr3\\final.g:55:1: ast_classDeclaration : 'class' ID ( 'extends' ID )? '{' ( classBody )* '}' ;
    public final finalParser.ast_classDeclaration_return ast_classDeclaration() throws RecognitionException {
        finalParser.ast_classDeclaration_return retval = new finalParser.ast_classDeclaration_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token string_literal23=null;
        Token ID24=null;
        Token string_literal25=null;
        Token ID26=null;
        Token char_literal27=null;
        Token char_literal29=null;
        finalParser.classBody_return classBody28 =null;


        Object string_literal23_tree=null;
        Object ID24_tree=null;
        Object string_literal25_tree=null;
        Object ID26_tree=null;
        Object char_literal27_tree=null;
        Object char_literal29_tree=null;

        try {
            // E:\\computer science\\cs\\level4\\407\\try\\sub\\project\\comp407\\antlr3\\final.g:55:21: ( 'class' ID ( 'extends' ID )? '{' ( classBody )* '}' )
            // E:\\computer science\\cs\\level4\\407\\try\\sub\\project\\comp407\\antlr3\\final.g:55:23: 'class' ID ( 'extends' ID )? '{' ( classBody )* '}'
            {
            root_0 = (Object)adaptor.nil();


            string_literal23=(Token)match(input,31,FOLLOW_31_in_ast_classDeclaration244); 
            string_literal23_tree = 
            (Object)adaptor.create(string_literal23)
            ;
            adaptor.addChild(root_0, string_literal23_tree);


            ID24=(Token)match(input,ID,FOLLOW_ID_in_ast_classDeclaration246); 
            ID24_tree = 
            (Object)adaptor.create(ID24)
            ;
            adaptor.addChild(root_0, ID24_tree);


            // E:\\computer science\\cs\\level4\\407\\try\\sub\\project\\comp407\\antlr3\\final.g:55:34: ( 'extends' ID )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==32) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // E:\\computer science\\cs\\level4\\407\\try\\sub\\project\\comp407\\antlr3\\final.g:55:35: 'extends' ID
                    {
                    string_literal25=(Token)match(input,32,FOLLOW_32_in_ast_classDeclaration249); 
                    string_literal25_tree = 
                    (Object)adaptor.create(string_literal25)
                    ;
                    adaptor.addChild(root_0, string_literal25_tree);


                    ID26=(Token)match(input,ID,FOLLOW_ID_in_ast_classDeclaration251); 
                    ID26_tree = 
                    (Object)adaptor.create(ID26)
                    ;
                    adaptor.addChild(root_0, ID26_tree);


                    }
                    break;

            }


            char_literal27=(Token)match(input,42,FOLLOW_42_in_ast_classDeclaration255); 
            char_literal27_tree = 
            (Object)adaptor.create(char_literal27)
            ;
            adaptor.addChild(root_0, char_literal27_tree);


            // E:\\computer science\\cs\\level4\\407\\try\\sub\\project\\comp407\\antlr3\\final.g:55:54: ( classBody )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==ID||LA4_0==30||LA4_0==33||LA4_0==37) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // E:\\computer science\\cs\\level4\\407\\try\\sub\\project\\comp407\\antlr3\\final.g:55:54: classBody
            	    {
            	    pushFollow(FOLLOW_classBody_in_ast_classDeclaration257);
            	    classBody28=classBody();

            	    state._fsp--;

            	    adaptor.addChild(root_0, classBody28.getTree());

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            char_literal29=(Token)match(input,43,FOLLOW_43_in_ast_classDeclaration260); 
            char_literal29_tree = 
            (Object)adaptor.create(char_literal29)
            ;
            adaptor.addChild(root_0, char_literal29_tree);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "ast_classDeclaration"


    public static class classBody_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "classBody"
    // E:\\computer science\\cs\\level4\\407\\try\\sub\\project\\comp407\\antlr3\\final.g:57:1: classBody : ( varDeclaration | methodDeclaration ) ;
    public final finalParser.classBody_return classBody() throws RecognitionException {
        finalParser.classBody_return retval = new finalParser.classBody_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        finalParser.varDeclaration_return varDeclaration30 =null;

        finalParser.methodDeclaration_return methodDeclaration31 =null;



        try {
            // E:\\computer science\\cs\\level4\\407\\try\\sub\\project\\comp407\\antlr3\\final.g:57:10: ( ( varDeclaration | methodDeclaration ) )
            // E:\\computer science\\cs\\level4\\407\\try\\sub\\project\\comp407\\antlr3\\final.g:57:12: ( varDeclaration | methodDeclaration )
            {
            root_0 = (Object)adaptor.nil();


            // E:\\computer science\\cs\\level4\\407\\try\\sub\\project\\comp407\\antlr3\\final.g:57:12: ( varDeclaration | methodDeclaration )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==ID||LA5_0==30||LA5_0==33) ) {
                alt5=1;
            }
            else if ( (LA5_0==37) ) {
                alt5=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;

            }
            switch (alt5) {
                case 1 :
                    // E:\\computer science\\cs\\level4\\407\\try\\sub\\project\\comp407\\antlr3\\final.g:57:13: varDeclaration
                    {
                    pushFollow(FOLLOW_varDeclaration_in_classBody268);
                    varDeclaration30=varDeclaration();
